Modernize NetconfKeystoreAdapterTest
Use local variable type inference, assertThrows/assertThat and
List.of().

Change-Id: I1657becb2c030550de99f4246f81417b80eb5ae9
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>